--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
+/* CSS FILE NUMBRING */
+/* 01 Header  */
+/* 02 Sidebar */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
+
+
+/* 01 HEADER CSS */
+
+.logo {
+  display: grid;
+  grid-column: 2/3;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  /* text-transform: uppercase; */
+  background: -webkit-linear-gradient(#aa77a6, rgb(109, 101, 226));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo h3 span {
+  font-size: 2.5rem;
+}
+
+/* tooltip */
+.tooltip {
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  z-index: 50; /* Ensure tooltip is on top */
+}
+
+
+/* 02  SIDEBAR CSS */
+
+/* styles.css or global.css */
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  width: 0; /* Hides the scrollbar */
+  background: transparent; /* Optional: Hide scrollbar background */
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
+}
+
+.group-hover\:opacity-100 {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.group:hover .group-hover\:block {
+  display: block;
+}
+
+.secordpart {
+  cursor: pointer; /* Change cursor to pointer */
 }
